--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: ^0.7.0
+  sticky_headers: ^0.3.0+2
+  flutter_bloc: ^8.1.3
+
+  firebase_core: ^2.22.0
+  firebase_storage: ^11.5.0
+  cloud_firestore: ^4.10.0
+  firebase_auth: ^4.13.0
+  http: ^1.1.0
+
+  image_picker: ^1.0.4
+  intl: ^0.18.1
+  lottie: ^2.7.0
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
